# auto-unpod

./: README.md  pyproject.toml
multicam-autocut/: README.md  SECURITY_FIXES.md  index.html
multicam-autocut/CSXS/: manifest.xml
multicam-autocut/js/: main.js
multicam-autocut/jsx/: autocut.jsx
multicam-autocut/python/: analyze.py
src/auto_unpod/: __init__.py
src/auto_unpod/core/: __init__.py
src/auto_unpod/gcs/: __init__.py
src/auto_unpod/transcription/: __init__.py
